<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cl_quiz"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:elevation="10dp"
    tools:context=".fragment.QuizFragment">

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_quiz"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="50dp"
        android:layout_marginTop="150dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="150dp"
        app:cardCornerRadius="10dp"
        app:cardElevation="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_20dp"
            android:layout_marginTop="@dimen/_20dp"
            android:layout_marginEnd="@dimen/_20dp"
            android:layout_marginBottom="@dimen/_20dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_question"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/question"
                android:textSize="@dimen/_20sp" />

            <RadioGroup
                android:id="@+id/rg_quiz"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_20dp">

                <RadioButton
                    android:id="@+id/rb_option_1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/option_1" />

                <RadioButton
                    android:id="@+id/rb_option_2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/option_2" />
                <RadioButton
                    android:id="@+id/rb_option_3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/option_3" />
                <RadioButton
                    android:id="@+id/rb_option_4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/option_4" />
            </RadioGroup>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>